# interactive-clap-derive

./: Cargo.toml
src/: lib.rs
src/derives/: interactive_clap.rs  to_cli_args.rs
src/derives/interactive_clap/: choose_variant.rs  from_cli_enum.rs  from_cli_for_enum.rs  from_cli_for_struct.rs  mod.rs
src/derives/interactive_clap/methods/: from_cli_for_enum.rs  from_cli_for_struct.rs  get_arg_for_struct.rs  interactive_clap_attrs_context.rs  mod.rs
src/helpers/: camel_case_to_kebab_case.rs  kebab_case.rs  mod.rs  snake_case_to_camel_case.rs
