[package]
name = "interactive_clap_derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1"
quote = "1.0"
syn = "1.0"
clap = "3.0.0-beta.4"
clap_generate = "3.0.0-beta.4"
darling = "0.13.0"
